[gd_scene load_steps=7 format=2]

[ext_resource path="res://screens/MainMenu.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.011976, 1 )
colors = PoolColorArray( 0.764706, 0.0784314, 0.196078, 1, 0.141176, 0.0431373, 0.211765, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1024

[sub_resource type="DynamicFontData" id=3]
font_path = "res://resources/fonts/Bitstream Vera Sans Mono Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = SubResource( 3 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
margin_left = 25.0
margin_top = 150.0
margin_right = 337.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 4 )
text = "HotTappa!"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 25.0
margin_top = 450.0
margin_right = 42.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Play!"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HighScoreButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = 100.0
margin_right = 441.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "High Scores"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = 250.0
margin_right = 441.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "Multiplayer"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "X"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MusicToggle" type="CheckButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -125.0
margin_right = 76.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
pressed = true
text = "Audio"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MessageBox" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -143.0
margin_right = -26.0
color = Color( 0.176471, 0.152941, 0.152941, 0.823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="MessageBox"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -75.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "Feature Currently Unavailable"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="MessageBox"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HighScoreButton" to="." method="_on_HighScoreButton_pressed"]
[connection signal="pressed" from="MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="MessageBox/MessageTimer" to="." method="_on_MessageTimer_timeout"]
